--- a/com_joomlaquiz/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz/admin/models/forms/quiz.xml
@@ -212,6 +212,16 @@
 			<option value="2">COM_JOOMLAQUIZ_LET_USER_WRITE</option>
 		</field>
 		<field
+				name="email_pdf_certificate"
+				type="list"
+				default="0"
+				label="COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_LABEL"
+				description="COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_DESC"
+				labelclass="control-label">
+			<option value="0">COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_OPTION0</option>
+			<option value="1">COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_OPTION1</option>
+		</field>
+		<field
 				name="c_email_chk"
 				type="radio"
 				class="btn-group"
