--- a/com_joomlaquiz/admin/models/forms/question.xml
+++ b/com_joomlaquiz/admin/models/forms/question.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form addfieldpath="/administrator/components/com_joomlaquiz/models/fields">
+<form>
 	<fieldset name="question_details"
 		label="COM_JOOMLAQUIZ_SETTINGS_GLOBAL"
 		description="COM_JOOMLAQUIZ_QUESTION_GLOBAL_DESC"
+			  addfieldpath="/administrator/components/com_joomlaquiz/models/fields"
 		>
 		
 		<field name="asset_id" type="hidden" filter="unset" />
@@ -25,27 +26,10 @@
 				<option value="0">COM_JOOMLAQUIZ_NO</option>
 				<option value="1">COM_JOOMLAQUIZ_YES</option>
 		</field>
-		<!--
-+		<field
-+				name="c_show_timer"
-+				type="radio"
-+				class="btn-group"
-+				label="COM_JOOMLAQUIZ_SHOW_TIMER"
-+				labelclass="control-label"
-+				default="0">
-+				<option value="0">COM_JOOMLAQUIZ_NO</option>
-+				<option value="1">COM_JOOMLAQUIZ_YES</option>
-+		</field>
-+		<field name="c_time_limit" type="text" default="" size="30"
-+				label="COM_JOOMLAQUIZ_TIME_LIMIT3" 
-+				description="COM_JOOMLAQUIZ_SPECIFY_THE_QUESTION_TIME" labelclass="control-label">
-+		</field>
-+		-->
 		<field name="c_separator" type="list" default="0" label="COM_JOOMLAQUIZ_SEPARATORLINE" labelclass="control-label">
 			<option value="0">COM_JOOMLAQUIZ_DO_NOT_ADD</option>
 			<option value="1">COM_JOOMLAQUIZ_ADD_SEPARATOR</option>
 		</field>
-
 		<field name="c_quiz_id" type="quizzes" label="COM_JOOMLAQUIZ_QUIZ" labelclass="control-label" required="false"/>
 		<field 
 			name="c_ques_cat" 
@@ -62,6 +46,9 @@
 		</field>
 		<field name="c_penalty" type="text" default="" size="30"
 				label="COM_JOOMLAQUIZ_PENALTY" labelclass="control-label" required="false">
+		</field>
+		<field name="ordering" type="orderingquestion" default="" size="30"
+			   label="COM_JOOMLAQUIZ_ORDERING" labelclass="control-label" required="false">
 		</field>
 	</fieldset>
 	<fieldset name="question_feedback"
